<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">M5 Settings</string>
    <string name="title_d2w">Doubletap 2 Wake</string>
    <string name="title_recovery">Recovery Tools</string>
    <string name="menu_about">About</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="about_M5S">This App has originally been created by Christian \'Myself5\' Oder with the help of Shlomy \'sreinst1\' Reinstein for use with M5-Kernel. \n Thanks to Damian \'pixeldotz\' Deaucali for creating the Icon!</string>
    <string name="d2w_on">Doubletap to Wake Enabled</string>
    <string name="d2w_off">Doubletap to Wake Disabled</string>
    <string name="persist">Persist D2W Settings (after Reboot)</string>
    <string name="CWM">CWM</string>
    <string name="TWRP">TWRP</string>
    <string name="PhilZ">PhilZ Touch</string>
    <string name="Recovery">Select Recovery to Download and Flash:</string>
    <string name="Download">Download</string>
    <string name="Flash">Flash Recovery</string>
    <string name="DownloadDialog">Downloading Recovery</string>
    <string name="recovery_flashed">Recovery Flashed!</string>
    <string name="About_Recovery">Here you can download and flash the Recovery you like. NOTE: This currently only works for the Z2.</string>
    <string name="About_D2W">Here you can toggle Double Tap to Wake.</string>
    <string name="d2w_enabled">D2W Enabled!</string>
    <string name="d2w_disabled">D2W Disabled!</string>
    <string name="reboot_recovery">Reboot to Recovery</string>
    <string name="reboot_bootloader">Reboot to Bootloader</string>
    <string name="rebooting">Rebooting Now!</string>
</resources>
