<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="myself5.m5_settings.Recovery">

    <TextView
        android:text="@string/Recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/Recovery_Select"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <Button
        android:id="@+id/download_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Download"
        android:layout_below="@+id/radioGroup"
        android:layout_alignEnd="@+id/flash_button"
        android:layout_alignStart="@+id/flash_button"
        android:theme="@style/ButtonTheme"/>

    <Button
        android:id="@+id/flash_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Flash"
        android:layout_below="@+id/download_button"
        android:layout_centerHorizontal="true"
        android:theme="@style/ButtonTheme"/>

    <Button
        android:id="@+id/reboot_recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reboot_recovery"
        android:layout_below="@+id/flash_button"
        android:layout_marginTop="64dp"
        android:layout_alignStart="@+id/reboot_bootloader"
        android:layout_alignEnd="@+id/reboot_bootloader"
        android:theme="@style/ButtonTheme"/>

    <Button
        android:id="@+id/reboot_bootloader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reboot_bootloader"
        android:layout_below="@+id/reboot_recovery"
        android:layout_centerHorizontal="true"
        android:theme="@style/ButtonTheme"/>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/Recovery_Select"
        android:layout_alignParentStart="true">

        <RadioButton android:id="@+id/radio_CWM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CWM"
            android:layout_weight="1" />

        <RadioButton android:id="@+id/radio_PhilZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PhilZ"
            android:layout_weight="1" />

        <RadioButton android:id="@+id/radio_TWRP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/TWRP"
            android:layout_weight="1" />
    </RadioGroup>

    <TextView
        android:text="@string/About_Recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/About_Recovery"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
