<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".D2W_Switcher">

    <ToggleButton
        android:id="@+id/togglebutton_d2w"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textOn="@string/d2w_on"
        android:textOff="@string/d2w_off"
        android:onClick="d2wToggleClicked"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp" />

    <!--<CheckBox android:id="@+id/checkbox_persist"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:text="@string/persist"-->
        <!--android:layout_below="@+id/togglebutton_d2w"-->
        <!--android:layout_centerHorizontal="true" />-->
    <TextView
        android:text="@string/Recovery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_alignBottom="@+id/radio_PhilZ"
        android:layout_marginBottom="56dp"
        android:layout_centerHorizontal="true" />

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
    </RadioGroup>
    <RadioButton android:id="@+id/radio_PhilZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PhilZ"
        android:onClick="onRadioButtonClicked"
        android:layout_marginTop="75dp"
        android:layout_below="@+id/togglebutton_d2w"
        android:layout_centerHorizontal="true" />

    <RadioButton android:id="@+id/radio_CWM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CWM"
        android:onClick="onRadioButtonClicked"
        android:layout_alignTop="@+id/radio_PhilZ"
        android:layout_toStartOf="@+id/togglebutton_d2w" />

    <RadioButton android:id="@+id/radio_TWRP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/TWRP"
        android:onClick="onRadioButtonClicked"
        android:layout_toEndOf="@+id/togglebutton_d2w"
        android:layout_alignTop="@+id/radio_PhilZ" />

    <Button
        android:id="@+id/flash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Flash"
        android:onClick="flashRecovery"
        android:layout_toEndOf="@+id/radio_CWM"
        android:layout_below="@+id/radio_PhilZ"
        android:layout_toStartOf="@+id/radio_TWRP" />

    <TextView
        android:text="@string/about_d2wS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="134dp"
        android:gravity="center"
        android:id="@+id/textView" />
</RelativeLayout>
